# qrstream-enhanced

./: .gitignore  BRANCHING.md  LICENSE  README-zh.md  README.md  handbook.md  main.py  output  plan.md  pyproject.toml
.github/workflows/: e2e-encode-decode.yml  mnn-tests.yml  publish.yml  real-world-tests.yml  release.yml  test.yml
benchmarks/: benchmark.py
dev/: HANDOFF-sandbox-implementation.md  INCIDENT-wechat-native-crash.md  benchmark.py  probe-fork-safety.py
dev/perf-profile/: .gitignore  Containerfile  FINDINGS.md  README.md  compare_modes.py  profile_decode.py  profile_encode.py  profile_hotpaths.py  run_all.py  run_podman.sh
dev/perf-profile/results/: decode_report.txt  encode_report.txt  hotpaths_report.txt
dev/test-container/: Containerfile  run.sh
dev/wechatqrcode-mnn-poc/: Containerfile.m0  Containerfile.m1  Containerfile.m175  Containerfile.m2  Containerfile.m3_archive  Containerfile.m3_probe  Containerfile.m3_profile  README.md
dev/wechatqrcode-mnn-poc/models/: .gitignore  README.md
dev/wechatqrcode-mnn-poc/results/: adaptive_fallback_report.md  bench_m0_pipeline.json  bench_real_frames.json  m0_report.md  m1_report.md  m3_decode_attempts_ab.json  m3_decode_attempts_podman.json  m3_final_report.md  m3_host_12only_mnn.json  m3_host_1only_mnn.json  m3_host_ab_mnn.json  m3_host_baseline_mnn.json  m3_host_baseline_opencv.json  m3_host_conf095.json  m3_host_confidence.json  m3_host_decode_attempts.json  m3_host_final_default.json  m3_profile_ab.json  m3_profile_ab_full.json  m3_profile_ab_full_opencv.json  m3_profile_baseline_mnn.json  m3_profile_baseline_opencv.json  mnn_batch_probe.json  mnn_batch_probe_v2.json  mnn_batch_raw_perf_cpu.json  mnn_tensor_list.json  quiet_zone_fix_report.md
dev/wechatqrcode-mnn-poc/scripts/: bench_9423.py  bench_m0_pipeline.py  bench_real_frames.py  benchmark_single_frame.py  convert_to_mnn.sh  fetch_models.sh  probe_cpu_decoders.py  probe_mnn_batch_output.py  probe_mnn_batch_output_v2.py  probe_mnn_batch_raw_perf.py  probe_mnn_list_tensors.py  profile_cpu_decode_ab.py  profile_cpu_decode_attempts.py  profile_e2e.py  profile_mnn_confidence.py  verify_models.py
skills/: .skills_store_lock.json
skills/patent-novelty-search/: _meta.json
skills/serper-google-search/: _meta.json
skills/serper-v/: _meta.json
src/qrstream/: __init__.py  __main__.py  _lt_decoder.py  _probe.py  _recovery.py  _video_io.py  cli.py  decoder.py  encoder.py  lt_codec.py  protocol.py  qr_sandbox.py  qr_utils.py
src/qrstream/detector/: __init__.py  base.py  mnn_backend.py  mnn_detector.py  opencv_wechat.py  router.py
src/qrstream/detector/models/: detect.mnn  sr.mnn
tests/: test_cli_decode_attempts.py  test_cli_detect_isolation.py  test_cli_overhead_floor.py  test_cpu_decode_contract.py  test_decoder.py  test_decoder_sandbox_integration.py  test_detector.py  test_detector_integration.py  test_e2e_encode_decode.py  test_gaussian_rescue.py  test_lt_codec.py  test_lt_sequential_seeds.py  test_lt_subset_robustness.py  test_optimizations.py  test_prng_v2.py  test_protocol.py  test_qr_generate.py  test_qr_generate_mask_fixed.py  test_qr_sandbox.py  test_real_recordings.py  test_real_recordings_layered.py  test_recovery_wiring.py  test_roundtrip.py  test_v074_bug_regression.py
tests/fixtures/: README.md
