[project]
name = "qrstream"
dynamic = ["version"]
description = "Encode and decode files via QR code video streams using LT fountain codes"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "David He", email = "hewei201031l@outlook.com" },
]
keywords = [
    "qr-code",
    "fountain-code",
    "lt-code",
    "luby-transform",
    "video-transfer",
    "erasure-code",
    "opencv",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "opencv-contrib-python>=4.5.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "qrcode[pil]>=7.0",
]

[project.urls]
Homepage = "https://github.com/ddddavid-he/qrstream-enhanced"
Repository = "https://github.com/ddddavid-he/qrstream-enhanced.git"
Issues = "https://github.com/ddddavid-he/qrstream-enhanced/issues"

[project.scripts]
qrs = "qrstream.cli:main"
qrstream = "qrstream.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrstream"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/qrstream/_version.py"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude slow end-to-end tests from the default run; opt in with
# `pytest -m slow` or `pytest tests/test_real_recordings.py`.
addopts = "-m 'not slow'"
markers = [
    "slow: end-to-end tests against real phone-recorded fixtures (seconds each)",
]
